logro blurrear el fondo durante el uso de los forms y mostrar cartel en caso de logueo/registro correcto

--- a/TP2/EntregaFinal/styles/forms.css
+++ b/TP2/EntregaFinal/styles/forms.css
@@ -30,6 +30,18 @@
     --facebook_color: #1877F2;
 }
 
+.blur::before {
+    content: '';
+    position: fixed; /* Cubre toda la ventana */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(35, 32, 43, 0.5); /* Fondo semi-transparente */
+    backdrop-filter: blur(5px); /* Desenfoque */
+    z-index: 1; /* Debajo del formulario */
+}
+
 .session_forms{
     display: flex;
     flex-direction: column;
@@ -38,7 +50,6 @@
     z-index: 2;
     transform: translate(-50%, -50%);
     justify-content: center;
-    transform: translate(-50%, -50%);
     border-radius: 12px;
     padding: 12px;
     background-color: var(--background_400);
@@ -124,7 +135,7 @@ label, .session_forms>h3{
     height: 50px;
 }
 
-.close_button{
+#close_button{
     width: 25px;
     height: 25px;
 }
@@ -243,5 +254,42 @@ h3, label{
 .unactive_button:hover{
     border: 3px solid var(--secondary_500);
     color: var(--secondary_500);
+}
+
+#sesion_correcta{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    z-index: 2;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    align-items: center;
+    justify-content: space-around;
+    top: 50%;
+    left: 50%;
+    background-color: var(--background_600);
+    border-radius: 12px;
+    border: 3px solid var(--white_300);
+    font-family: var(--font_condensed);
+    font-size: medium;
+    color: var(--white_200);
+    padding: 12px;
+}
+
+#sesion_correcta button{
+    margin-top: 20px;
+    width: fit-content;
+    padding: 4px;
+    border-radius: 8px;
+    border: 3px solid var(--accent);
+    color: var(--accent);
+    font-family: var(--font_roboto);
+    font-weight: bold;
+    font-size: medium;
+    cursor: pointer;
+}
+
+#sesion_correcta button:hover{
+    scale: 1.1;
 }
 
