--- a/TP2/EntregaFinal/styles/general.css
+++ b/TP2/EntregaFinal/styles/general.css
@@ -42,9 +42,10 @@
     display: none;
 }
 
-body {
+body{
     background-color: var(--background_500);
     height: 100vh;
+    z-index: 1;
 }
 
 button {
